# SBSC

./: .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  log.txt  output.json  requirements.txt  requirements_dev.txt  results.pickle  setup.cfg  setup.py  tox.ini
SBSC/: Untitled-1.ipynb
SBSC/output/: filt.py
SBSC/parsers/: data_processor.py  df_schema.py  genomic_region.py  parse_pile.py  parse_pileup.py  parse_reference.py  variant_calling.py
tests/: test_main.py  test_utils.py
tests/resources/: HCC1937_n_BRCA1.pileup.gz.tbi  HCC1937_n_RNF157.pileup.gz.tbi  HCC1937_t_BRCA1.pileup.gz.tbi  HCC1937_t_RNF157.pileup.gz.tbi  README.md  chr17_RNF157.fa.fai  chr22_KI270734v1_random.json  chr22_KI270734v1_random_001_9_12_10.tsv  chr22_KI270734v1_random_no-MNVs_001_9_12_10.tsv  out.tsv  output.json  output_001_9_12_10.tsv
