[metadata]
name = SBSC
version = attr: SBSC.__version__
description = A simple somatic SNV and MNV caller
long_description = file: README.md, LICENSE
author = Liam McIntyre
author_email = shimbalama@gmail.com
license = MIT License
classifiers:
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.11
scripts =
    bin/SBSCall.py
    bin/SBSFilter.py
zip_safe = False
